Add logic for barchart

--- a/express/index.html
+++ b/express/index.html
@@ -8,13 +8,9 @@
     </head>
     <body>
         <header></header>
-        <main>
-            <div class="chart-container">
-
-            </div>
-        </main>
+        <main></main>
         <footer></footer>
     </body>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="/js/main.js></script>
+    <script src="/js/main.js"></script>
 </html>
