Add logic for height and weight

--- a/static/index.html
+++ b/static/index.html
@@ -8,18 +8,25 @@
         <title>Barchart</title>
     </head>
     <body>
-        <h1>Pokemon height/weight</h1>
+        <h1>Pokemon height</h1>
         <div>
             <form action="">
                 <strong>Filter:</strong>
                 <label
-                    ><input checked type="radio" name="generation" value="1" id="first-filter" />First Generation</label
+                    ><input checked type="radio" name="generation" value="first-filter" id="first-filter" />First
+                    Generation</label
                 >
-                <label><input type="radio" name="generation" value="2" id="second-filter" />Second Generation</label>
-                <label><input type="radio" name="generation" value="3" id="third-filter" />Third Generation</label>
+                <label
+                    ><input type="radio" name="generation" value="second-filter" id="second-filter" />Second
+                    Generation</label
+                >
+                <label
+                    ><input type="radio" name="generation" value="third-filter" id="third-filter" />Third
+                    Generation</label
+                >
                 <strong>|</strong>
-                <label><input checked type="radio" name="value" value="4" id="first-filter-height" />Height</label>
-                <label><input type="radio" name="value" value="5" id="second-filter-weight" />Weight</label>
+                <label><input checked type="radio" name="value" value="height" id="first-filter-height" />Height</label>
+                <label><input type="radio" name="value" value="weight" id="second-filter-weight" />Weight</label>
             </form>
         </div>
     </body>
